--- a/templates/image.html
+++ b/templates/image.html
@@ -33,7 +33,7 @@
             let face_image = document.getElementById('face-image');
             if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
                 navigator.mediaDevices.getUserMedia({video: true}).then(function (stream) {
-                    video.src = window.URL.createObjectURL(stream);
+                    video.srcObject = stream;
                     video.play();
                 });
             }
