--- a/templates/video.html
+++ b/templates/video.html
@@ -32,7 +32,7 @@
             let image = new Image();
             if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
                 navigator.mediaDevices.getUserMedia({video: true}).then(function (stream) {
-                    video.src = window.URL.createObjectURL(stream);
+                    video.srcObject = stream;
                     video.play();
                 });
             }
