--- a/sub_app/templates/video.html
+++ b/sub_app/templates/video.html
@@ -2,8 +2,8 @@
 {% block content %}
     <div class="col s4">
         <div class="collection">
-            <a href="{% url 'face-detect:image' %}" class="collection-item">Simple Face Detection</a>
-            <a href="{% url 'face-detect:live_video' %}" class="collection-item active">Live Face Detection</a>
+            <a href="{% url 'image' %}" class="collection-item">Simple Face Detection</a>
+            <a href="{% url 'live_video' %}" class="collection-item active">Live Face Detection</a>
         </div>
     </div>
     <div class="col s6">
